Pesäsivun henkipöllön kuva vaihdettu pesälliseen versioon

--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -66,7 +66,7 @@
 
     <div class="kuva">
       <img
-        src="../../assets/images/henkipollo5.0_oikeella.png"
+        src="../../assets/images/Henkipollo_pesassa.svg"
         id="henkipollo_kuva" alt="kuva Henkipöllöstä"
       />
     </div>
