Tehty pikakorjauksia asetukset.component.html-tiedostoon ja katsotaan, toimiiko koodi (ks. edellinen kommitti).

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -8,7 +8,7 @@
 <fieldset form="form1">
 <legend>Koulutusohjelman asetukset</legend>
 
-        <label class="bold" for="aloituspaiva">Opintojen aloituspäivä</label
+        <label class="bold" for="aloituspaiva">Opintojen aloituspäivä</label>
         ><br />
         <input
           type="text"
@@ -125,7 +125,7 @@
 <fieldset form="form1">
 <legend>Henkipöllön asetukset</legend>
         <label class="form-check-label bold" for="henkipollonAsetukset"
-          >Näistä teemoista haluan henkipöllön kertovan minulle:</label
+          >Näistä teemoista haluan henkipöllön kertovan minulle:</label>
         ><br />
         <input
           type="checkbox"
