branchin vaihto kommit

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -104,14 +104,24 @@
                   <a
                     class="icon-linkki-edit"
                     (click)="
-                      open2(muokkaus, muistio.otsikko, muistio.muistiinpano)
+                      open2(
+                        muokkaus,
+                        muistio.otsikko,
+                        muistio.muistiinpano,
+                        muistio.kurssi
+                      )
                     "
                     ><i class="far fa-edit fa-lg"></i
                   ></a>
                   <a
                     class="icon-linkki-delete"
                     (click)="
-                      open2(poisto, muistio.otsikko, muistio.muistiinpano)
+                      open2(
+                        poisto,
+                        muistio.otsikko,
+                        muistio.muistiinpano,
+                        muistio.kurssi
+                      )
                     "
                     ><i class="far fa-trash-alt fa-lg"></i
                   ></a>
@@ -255,7 +265,14 @@
           <input
             value="{{ otsikko }}"
             placeholder="{{ otsikko }}"
+            hidden
             name="otsikko"
+            class="modal-input"
+          />
+          <input
+            value="{{ otsikkoUusi }}"
+            placeholder="{{ otsikkoUusi }}"
+            name="otsikkoUusi"
             class="modal-input"
           />
           <label class="keskitetty-label" for="muistiinpano"
@@ -266,6 +283,7 @@
           }}</textarea>
         </div>
         <input type="text" hidden [value]="tunnus" name="tunnus" />
+        <input type="text" hidden [value]="kurssi" name="kurssi" />
         <!-- Modal footer -->
         <div class="modal-footer">
           <button type="submit" class="btn btn-success">
@@ -299,6 +317,7 @@
         <!-- Modal Header -->
         <h4>Poista muistiinpano</h4>
         <button
+          id="sulkunappi"
           type="button"
           class="close"
           (click)="modal.dismiss('Cross click')"
@@ -316,19 +335,15 @@
         <button type="button" class="btn btn-success">
           Peruuta
         </button>
-        <button
-          type="button"
-          class="btn btn-danger"
-          (click)="modal.dismiss('Cross click')"
-        >
+        <button type="button" class="btn btn-danger" (click)="poistamp()">
           Poista
         </button>
 
         <!-- this button is hidden, used to close from typescript -->
         <button
           type="button"
-          id="close-modal2"
-          data-dismiss="modal"
+          id="close-modal4"
+          data-dismiss="myModal4"
           style="display: none"
         >
           Close
