hineosäätöä muistiinpanon muokkaukseen

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -89,6 +89,7 @@
                   <button
                     type="button"
                     class="close"
+                    id="muistiinpano-close-nappi"
                     (click)="modal.dismiss('Cross click')"
                   >
                     &times;
