--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -44,6 +44,7 @@
           [(ngModel)]="asetuslomake.kokonaisOp"
           class="form-control"
           name="kokonaisOp"
+          [placeholder]="asetuksetLadattu.asetukset.kokonaisOp"
           [value]="asetuksetLadattu.asetukset.kokonaisOp"
         />
       </div>
