--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -4,156 +4,164 @@
   <div id="background">
     <h1>Asetukset</h1>
     <form (ngSubmit)="onSubmit(form1.value)" #form1="ngForm">
-      <div class="form-group">
-<fieldset form="form1">
-<legend>Koulutusohjelman asetukset</legend>
+      <fieldset form="form1">
+<!-- Huom! Legend-tagi heti fieldset-tagin perässä, jotta ruudunlukuohjelma osaa lukea lomaketta oikein. Se tulee myös olla ennen div-elementtiä, jotta lomake toimii (todettu toimivaksi JAWS-ruudunlukuohjelmalla). -->
+          <legend>Koulutusohjelman asetukset</legend>
+        <div class="form-group">
 
-        <label class="bold" for="aloituspaiva">Opintojen aloituspäivä</label>
-        ><br />
-        <input
-          type="text"
-          [value]="tunnus"
-          hidden
-          [(ngModel)]="asetuslomake.tunnus"
-          name="tunnus"
-        />
-        <!--Max-arvo on tällä puolella 2020-05-05 
+
+          <label class="bold" for="aloituspaiva">Opintojen aloituspäivä</label>
+          <br />
+          <input
+            type="text"
+            [value]="tunnus"
+            hidden
+            [(ngModel)]="asetuslomake.tunnus"
+            name="tunnus"
+          />
+          <!--Max-arvo on tällä puolella 2020-05-05 
           mutta ts-tiedoston puolelta siihen syötetään aina current date, joten tästä ei tarvitse välittää-->
-        <input
-          type="date" id="datefield" min="1990-01-01" max="2020-05-05"
-          [(ngModel)]="asetuslomake.aloituspaiva"
-          name="aloituspaiva"
-          class="form-control"
-          [value]="asetuksetLadattu.asetukset.aloituspaiva"
-        />
-      </div>
+          <input
+            type="date"
+            id="datefield"
+            min="1990-01-01"
+            max="2020-05-05"
+            [(ngModel)]="asetuslomake.aloituspaiva"
+            name="aloituspaiva"
+            class="form-control"
+            [value]="asetuksetLadattu.asetukset.aloituspaiva"
+          />
+        </div>
 
-      <div class="form-group">
-        <label class="bold" for="ryhmatunnus">Ryhmätunnus</label><br />
-        <input
-          type="text"
-          [(ngModel)]="asetuslomake.ryhmatunnus"
-          class="form-control"
-          name="ryhmatunnus"
-          [placeholder]="asetuksetLadattu.asetukset.ryhmatunnus"
-        />
-      </div>
+        <div class="form-group">
+          <label class="bold" for="ryhmatunnus">Ryhmätunnus</label><br />
+          <input
+            type="text"
+            [(ngModel)]="asetuslomake.ryhmatunnus"
+            class="form-control"
+            name="ryhmatunnus"
+            [placeholder]="asetuksetLadattu.asetukset.ryhmatunnus"
+          />
+        </div>
 
-      <div class="form-group">
-        <label class="bold" for="kokonaisOp"
-          >Koulutusohjelman opintopisteiden kokonaismäärä</label
-        ><br />
-        <input
-          type="number" min="0" max="800"
-          [(ngModel)]="asetuslomake.kokonaisOp"
-          class="form-control"
-          name="kokonaisOp"
-          [value]="asetuksetLadattu.asetukset.kokonaisOp"
-        />
-      </div>
-</fieldset>
+        <div class="form-group">
+          <label class="bold" for="kokonaisOp"
+            >Koulutusohjelman opintopisteiden kokonaismäärä</label
+          ><br />
+          <input
+            type="number"
+            min="0"
+            max="800"
+            [(ngModel)]="asetuslomake.kokonaisOp"
+            class="form-control"
+            name="kokonaisOp"
+            [value]="asetuksetLadattu.asetukset.kokonaisOp"
+          />
+        </div>
+      </fieldset>
       <!--checkboxit tästä eteenpäin-->
       <!--checkboxeilla varmistetaan kiinnostusta yhdessä opiskeluun, pöllöjen näkyminen sivuilla sekä henkipöllön asetukset-->
-<!-- Opiskeluasetukset -->
-      <div class="form-check">
-<fieldset form="form1">
-<legend>Opiskeluasetukset</legend>
-        <label class="form-check-label bold" for="yhteisetTuokiot"
-          >Olen kiinnostunut osallistumaan mahdollisiin ryhmäni
-          opiskelutuokioihin</label
-        ><br />
-        <input
-          type="checkbox"
-          [(ngModel)]="asetuksetLadattu.asetukset.yhteisetTuokiot"
-          name="yhteisetTuokiot"
-          class="form-check-input"
-        />
-        Kyllä<br />
-      </div>
-      <!--Radio-napit, joilla kysytään onko opiskeluajankohdalla väliä-->
-      <div class="form-check">
-        <label class="form-check-label bold" for="opiskeluajankohta"
-          >Opiskelen tehokkaimmin tähän aikaan päivästä:</label>
-        ><br />
-        <input
-          type="radio"
-          name="opiskeluajankohta"
-          [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
-          value="milloinVain"
-        />
-        Mihin aikaan vain<br />
-        <input
-          type="radio"
-          name="opiskeluajankohta"
-          [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
-          value="aamupaiva"
-        />
-        Aamupäivä<br />
-        <input
-          type="radio"
-          name="opiskeluajankohta"
-          [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
-          value="iltapaiva"
-        />
-        Iltapäivä<br />
-      </div>
+      <!-- Opiskeluasetukset -->
+      <fieldset form="form1">
+          <legend>Opiskeluasetukset</legend>
+        <div class="form-check">
+          <label class="form-check-label bold" for="yhteisetTuokiot"
+            >Olen kiinnostunut osallistumaan mahdollisiin ryhmäni
+            opiskelutuokioihin</label
+          ><br />
+          <input
+            type="checkbox"
+            [(ngModel)]="asetuksetLadattu.asetukset.yhteisetTuokiot"
+            name="yhteisetTuokiot"
+            class="form-check-input"
+          />
+          Kyllä<br />
+        </div>
+        <!--Radio-napit, joilla kysytään onko opiskeluajankohdalla väliä-->
+        <div class="form-check">
+          <label class="form-check-label bold" for="opiskeluajankohta"
+            >Opiskelen tehokkaimmin tähän aikaan päivästä:</label
+          >
+          <br />
+          <input
+            type="radio"
+            name="opiskeluajankohta"
+            [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
+            class="form-check-input"
+            value="milloinVain"
+          />
+          Mihin aikaan vain<br />
+          <input
+            type="radio"
+            name="opiskeluajankohta"
+            [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
+            class="form-check-input"
+            value="aamupaiva"
+          />
+          Aamupäivä<br />
+          <input
+            type="radio"
+            name="opiskeluajankohta"
+            [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
+            class="form-check-input"
+            value="iltapaiva"
+          />
+          Iltapäivä<br />
+        </div>
+      </fieldset>
 
-</fieldset>
-<!-- Pöllöjen näkyvyys -->
-
-      <div class="form-check">
-<fieldset form="form1">
-<legend>Pöllöjen näkyvyys</legend>
-        <label class="form-check-label bold" for="pollojenNakyminen"
-          >Haluan nähdä pöllöt sovelluksessani:</label>
-        ><br />
-        <input
-          type="checkbox"
-          [(ngModel)]="asetuksetLadattu.asetukset.pollojenNakyminen"
-          checked="checked"
-          name="pollojenNakyminen"
-          class="form-check-input"
-        />
-        Kyllä<br />
-      </div>
-</fieldset>
-<!-- Henkipöllön asetukset -->
-      <div class="form-check">
-<fieldset form="form1">
-<legend>Henkipöllön asetukset</legend>
-        <label class="form-check-label bold" for="henkipollonAsetukset"
-          >Näistä teemoista haluan henkipöllön kertovan minulle:</label>
-        ><br />
-        <input
-          type="checkbox"
-          [(ngModel)]="asetuksetLadattu.asetukset.henkipolloOpinnot"
-          checked="checked"
-          name="henkipolloOpinnot"
-          class="form-check-input"
-        />
-        Opinnot<br />
-        <input
-          type="checkbox"
-          [(ngModel)]="asetuksetLadattu.asetukset.henkipolloElama"
-          name="henkipolloElama"
-          checked="checked"
-          class="form-check-input"
-        />
-        Elämänhallinta<br />
-        <input
-          type="checkbox"
-          [(ngModel)]="asetuksetLadattu.asetukset.henkipolloValistus"
-          checked="checked"
-          name="henkipolloValistus"
-          class="form-check-input"
-        />
-        Valistus<br />
-      </div>
-</fieldset>
-
+      <!-- Pöllöjen näkyvyys -->
+      <fieldset form="form1">
+          <legend>Pöllöjen näkyvyys</legend>
+        <div class="form-check">
+          <label class="form-check-label bold" for="pollojenNakyminen"
+            >Haluan nähdä pöllöt sovelluksessani:</label
+          >
+          <br />
+          <input
+            type="checkbox"
+            [(ngModel)]="asetuksetLadattu.asetukset.pollojenNakyminen"
+            checked="checked"
+            name="pollojenNakyminen"
+            class="form-check-input"
+          />
+          Kyllä<br />
+        </div>
+      </fieldset>
+      <!-- Henkipöllön asetukset -->
+      <fieldset form="form1">
+          <legend>Henkipöllön asetukset</legend>
+        <div class="form-check">
+          <label class="form-check-label bold" for="henkipollonAsetukset"
+            >Näistä teemoista haluan henkipöllön kertovan minulle:</label
+          >
+          <br />
+          <input
+            type="checkbox"
+            [(ngModel)]="asetuksetLadattu.asetukset.henkipolloOpinnot"
+            checked="checked"
+            name="henkipolloOpinnot"
+            class="form-check-input"
+          />
+          Opinnot<br />
+          <input
+            type="checkbox"
+            [(ngModel)]="asetuksetLadattu.asetukset.henkipolloElama"
+            name="henkipolloElama"
+            checked="checked"
+            class="form-check-input"
+          />
+          Elämänhallinta<br />
+          <input
+            type="checkbox"
+            [(ngModel)]="asetuksetLadattu.asetukset.henkipolloValistus"
+            checked="checked"
+            name="henkipolloValistus"
+            class="form-check-input"
+          />
+          Valistus<br />
+        </div>
+      </fieldset>
       <!--Tallennusnappi-->
       <div class="btn-container">
         <div>
