Koodia kommentoitu ja selkeytetty (mm. lisäämällä välejä)

--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -2,7 +2,7 @@
   <div class="otsikko">
     <h1 class="mat-dialog-title">Tervetuloa!</h1>
     <p>
-      {{ valittuKehu }}
+      {{ valittuTervehdys }}
     </p>
   </div>
   <!-- <div class="tekstit">
