--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<!-- Muutettu otsikko (title-elementin sisältö) havainnolliselmmaksi. Aiemmin tässä oli pelkkä otsikko, joka tuli title-oliosta, mutta  nyt sen lisäksi myös havainnollista, "Aktiiviset kurssit" -sivusta kertovaa tekstiä. -->
     <title>{{ title }}</title>
   </head>
   <body>
@@ -17,7 +16,7 @@
           data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
-          aria-label="Navigointivalikon näkyminen"
+          aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
           <span class="navbar-toggler-icon"></span>
@@ -45,50 +44,35 @@
       </nav>
     </header> -->
 
-
     <ul class="kurssi-listaus">
-
       <div class="button-container">
-<label class="bold" for="uusiKurssi">Lisää uusi kurssi
-        <button class="btn btn-success lisays-nappi" (click)="avaa(UusiKurssi)" id="uusiKurssi"
-aria-label="Lisää uusi kurssi">
+        <button class="btn btn-success lisays-nappi" (click)="avaa(UusiKurssi)">
           Lisää uusi kurssi
-
-
         </button>
-<!-- abr-elementti, joka sisältää aria-label-parametrin, jonka ruudunlukuohjelma lukee varmasti asetuksista riippumatta. -->
-
-</label>
-<!-- UusiMuistiinpano-painikkeen label-elementti. Painikkeessa id on sama kuin labelin for-attribuuttikin eli uusiMuistiinpano. -->
-<label  for="uusiMuistiinpano"><span>Lisää uusi muistiinpano</span>
         <button
           class="btn btn-success lisays-nappi"
           data-toggle="modal"
           data-target="#myModal"
-id="uusiMuistiinpano"
-aria-label"Lisää muistiinpano">
+        >
           Lisää uusi muistiinpano
         </button>
-</label>
-<label for="uusiTehtava">Lisää uusi tehtävä</label>
         <button
           class="btn btn-success lisays-nappi"
           data-toggle="modal"
           data-target="#tehtavanLisaysModal"
-id="uusiTehtava"
-aria-label="Lisää uusi tehtävä">
+        >
           Lisää uusi tehtävä
         </button>
       </div>
-
       <li
         *ngFor="let kurssi of kurssit2[0].aktiiviset_kurssit"
-        id="kurssilista">
+        id="kurssilista"
+      >
         <div class="kurssi-kortti">
-          <img src="{{ kurssi.kuva }}" id="pollo" />
-          <h3>{{ kurssi.nimi }}</h3>
+          <img src="{{ kurssi.kuva }}" id="pollo" alt="Kuva kurssipöllöstä" />
+          <h5>{{ kurssi.nimi }}</h5>
           <div id="muistiinpanolista">
-            <h4>Muistiinpanot</h4>
+            <h6>Muistiinpanot</h6>
             <div *ngFor="let muistio of kurssi.muistiinpanot">
               <a
                 (click)="open(content, muistio.otsikko)"
@@ -101,12 +85,12 @@ aria-label="Lisää uusi tehtävä">
               <ng-template #content let-modal>
                 <div class="modal-header" id="myModal2">
                   <!-- Modal Header -->
-                  <h3 class="modal-title">{{ muistio.otsikko }}</h3>
+                  <h4 class="modal-title">{{ muistio.otsikko }}</h4>
                   <button
                     type="button"
                     class="close"
+                    id="muistiinpano-close-nappi"
                     (click)="modal.dismiss('Cross click')"
-aria-label="Sulje"
                   >
                     &times;
                   </button>
@@ -118,17 +102,38 @@ aria-label="Sulje"
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-<label for="sulje">Sulje</label>
+                  <a
+                    class="icon-linkki-edit"
+                    (click)="
+                      open2(
+                        muokkaus,
+                        muistio.otsikko,
+                        muistio.muistiinpano,
+                        muistio.kurssi
+                      )
+                    "
+                    ><i class="far fa-edit fa-lg"></i
+                  ></a>
+                  <a
+                    class="icon-linkki-delete"
+                    (click)="
+                      open2(
+                        poisto,
+                        muistio.otsikko,
+                        muistio.muistiinpano,
+                        muistio.kurssi
+                      )
+                    "
+                    ><i class="far fa-trash-alt fa-lg"></i
+                  ></a>
                   <button
                     type="button"
                     class="btn btn-danger"
                     (click)="modal.dismiss('Cross click')"
-id="sulje"
-aria-label="sulje"
                   >
                     Sulje
                   </button>
-<label for="close-modal2">Sulje</label>
+
                   <!-- this button is hidden, used to close from typescript -->
                   <button
                     type="button"
@@ -136,14 +141,14 @@ aria-label="sulje"
                     data-dismiss="modal"
                     style="display: none"
                   >
-                    Sulje
+                    Close
                   </button>
                 </div>
               </ng-template>
             </div>
           </div>
           <div class="teht-done">
-            <h4>Tehdyt tehtävät</h4>
+            <h6>Tehdyt tehtävät</h6>
             <a
               *ngFor="let tehtava of kurssi.tehdytTehtavat"
               (click)="open(content, tehtava.tehtava)"
@@ -153,7 +158,7 @@ aria-label="sulje"
             </a>
           </div>
           <div class="teht-undone">
-            <h4>Tekemättömät tehtävät</h4>
+            <h6>Tekemättömät tehtävät</h6>
             <a
               *ngFor="let tehtava of kurssi.uudetTehtavat"
               (click)="open(content, tehtava.tehtava)"
@@ -169,14 +174,12 @@ aria-label="sulje"
       <div class="modal-header" id="UusiKurssiModal">
         <!-- Uusi kurssi Modal Header -->
         <h4 class="modal-title">Lisää uusi kurssi</h4>
-<label for="rastipainike">Rastipainike</label>
         <button
           type="button"
           class="close"
           (click)="modal.dismiss('Cross click')"
-aria-label="rastipainike"
         >
-          Rastipainike &times;
+          &times;
         </button>
       </div>
       <!-- Uusi kurssi modal body -->
@@ -193,7 +196,6 @@ aria-label="rastipainike"
               id="kurssinValinta"
               ngbAutofocus
               name="nimi"
-aria-label="Kurssin valinta"
             >
               <option>-- Valitse kurssi --</option>
               <option *ngFor="let i of kurssit3[0]">
@@ -209,23 +211,19 @@ aria-label="Kurssin valinta"
             </select>
           </div>
           <hr />
-<label for="lisaa">Lisää</label>
           <div class="button-container">
             <button
               class="btn btn-primary modal-nappi"
               type="submit"
               method="POST"
-id="lisaa"
             >
               Lisää
             </button>
-<label for="suljeModaali">Sulje </label>
             <button
               type="button"
               class="btn btn-danger modal-nappi"
               (click)="modal.dismiss('Cross click')"
-id="suljeModaali"
-            aria-label="Sulje Lisää uusi kurssi -ikkuna">
+            >
               Sulje
             </button>
           </div>
@@ -238,7 +236,118 @@ id="suljeModaali"
           data-dismiss="modal"
           style="display: none"
         >
-          Sulje
+          Close
+        </button>
+      </div>
+    </ng-template>
+
+    <!--MUISTIINPANON MUOKKAUS MODAL-->
+
+    <ng-template #muokkaus let-modal>
+      <div class="modal-header" id="myModal4">
+        <!-- Modal Header -->
+        <h4>Muokkaa muistiinpanoa</h4>
+        <button
+          type="button"
+          class="close"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Modal 2 body -->
+      <form
+        (submit)="submit()"
+        action="http://localhost:3000/muokkaamp"
+        method="POST"
+      >
+        <div class="modal-body muokkaus-body">
+          <label class="keskitetty-label" for="otsikko">Otsikko</label>
+          <input
+            value="{{ otsikko }}"
+            placeholder="{{ otsikko }}"
+            hidden
+            name="otsikko"
+            class="modal-input"
+          />
+          <input
+            value="{{ otsikkoUusi }}"
+            placeholder="{{ otsikkoUusi }}"
+            name="otsikkoUusi"
+            class="modal-input"
+          />
+          <label class="keskitetty-label" for="muistiinpano"
+            >Muistiinpano</label
+          >
+          <textarea class="modal-textarea" name="muistiinpano">{{
+            muistiinpano2
+          }}</textarea>
+        </div>
+        <input type="text" hidden [value]="tunnus" name="tunnus" />
+        <input type="text" hidden [value]="kurssi" name="kurssi" />
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">
+            Tallenna
+          </button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="modal.dismiss('Cross click')"
+          >
+            Sulje
+          </button>
+
+          <!-- this button is hidden, used to close from typescript -->
+          <button
+            type="button"
+            id="close-modal2"
+            data-dismiss="modal"
+            style="display: none"
+          >
+            Close
+          </button>
+        </div>
+      </form>
+    </ng-template>
+
+    <!--MUISTIINPANON POISTO MODAL-->
+
+    <ng-template #poisto let-modal>
+      <div class="modal-header" id="myModal4">
+        <!-- Modal Header -->
+        <h4>Poista muistiinpano</h4>
+        <button
+          id="sulkunappi"
+          type="button"
+          class="close"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <p>Haluatko varmasi poistaa muistiinpanon: {{ otsikko }}?</p>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success">
+          Peruuta
+        </button>
+        <button type="button" class="btn btn-danger" (click)="poistamp()">
+          Poista
+        </button>
+
+        <!-- this button is hidden, used to close from typescript -->
+        <button
+          type="button"
+          id="close-modal4"
+          data-dismiss="myModal4"
+          style="display: none"
+        >
+          Close
         </button>
       </div>
     </ng-template>
