--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -19,6 +19,7 @@
             [(ngModel)]="asetuslomake.tunnus"
             name="tunnus"
 id="aloituspaiva"
+aria-label="Aloituspäivä"
           />
           <!--Max-arvo on tällä puolella 2020-05-05 
           mutta ts-tiedoston puolelta siihen syötetään aina current date, joten tästä ei tarvitse välittää-->
@@ -31,6 +32,7 @@ id="aloituspaiva"
             name="aloituspaiva"
             class="form-control"
             [value]="asetuksetLadattu.asetukset.aloituspaiva"
+aria-label="Alioituspäivä"
           />
         </div>
 
@@ -43,6 +45,7 @@ id="aloituspaiva"
             name="ryhmatunnus"
             [placeholder]="asetuksetLadattu.asetukset.ryhmatunnus"
 id="ryhmatunnus"
+aria-label="Ryhmätunnus"
           />
         </div>
 
@@ -59,6 +62,7 @@ id="ryhmatunnus"
             name="kokonaisOp"
             [value]="asetuksetLadattu.asetukset.kokonaisOp"
 id="kokonaisOp"
+
           />
         </div>
       </fieldset>
@@ -81,14 +85,14 @@ id="kokonaisOp"
             name="yhteisetTuokiot"
             class="form-check-input"
 id="yhteisetTuokiot"          
+aria-label="Kyllä"
 />
           <br />
         </div>
         <!--Radio-napit, joilla kysytään onko opiskeluajankohdalla väliä-->
         <div class="form-check">
           <label class="form-check-label bold" for="opiskeluajankohta"
-            >Opiskelen tehokkaimmin tähän aikaan päivästä:</label
-          >
+            >Opiskelen tehokkaimmin tähän aikaan päivästä:</label>
           <br />
 
 <label for="mihinAikaanVain">Mihin aikaan vain</label>
@@ -99,6 +103,7 @@ id="yhteisetTuokiot"
             class="form-check-input"
             value="milloinVain"
 id="mihinAikaanVain"
+aria-label="Mihin aikaan vain"
           />
           <br />
 <label for="aamupaiva">Aamupäivä</label>
@@ -109,6 +114,7 @@ id="mihinAikaanVain"
             class="form-check-input"
             value="aamupaiva"
 id="aamupaiva"
+aria-label="Aamupäivä"
           />
           <br />
 <label for="iltapaiva">Iltapäivä</label>
@@ -119,6 +125,7 @@ id="aamupaiva"
             class="form-check-input"
             value="iltapaiva"
 id="iltapaiva"
+aria-label="Iltapäivä"
           />
           <br />
         </div>
@@ -141,6 +148,7 @@ id="iltapaiva"
             name="pollojenNakyminen"
             class="form-check-input"
 id="pollojenNakyminen"
+aria-label="Pöllöjen näkyminen: Kyllä"
           />
           <br />
         </div>
@@ -160,7 +168,8 @@ id="pollojenNakyminen"
             checked="checked"
             name="henkipolloOpinnot"
             class="form-check-input"
-id="opinnot">
+id="opinnot"
+aria-label="Opinnot"
           />
           <br />
 <label for="elamanhallinta">Elämänhallinta</label>
@@ -171,6 +180,7 @@ id="opinnot">
             checked="checked"
             class="form-check-input"
 id="elamanhallinta"
+aria-label="Elämänhallinta"
           />
           <br />
 <label for="valistus">Valistus</label>
@@ -181,7 +191,8 @@ id="elamanhallinta"
             name="henkipolloValistus"
             class="form-check-input"
 id="valistus"
-          />
+aria-label="valistus"          
+/>
           Valistus<br />
         </div>
       </fieldset>
