Lisätty aria-label-elementti lähes kaikkiin asetukset.component.html-sivun kohtiin. Se jätettiin lisäämättä Koulutusohjelman kokonaispisteiden opintomäärä teswtin jälkeen, sillä se aiheutti sekaannusta JAWS-ruudunlukuohjelmalla testattaessa.

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -62,7 +62,6 @@ aria-label="Ryhmätunnus"
             name="kokonaisOp"
             [value]="asetuksetLadattu.asetukset.kokonaisOp"
 id="kokonaisOp"
-
           />
         </div>
       </fieldset>
@@ -148,7 +147,7 @@ aria-label="Iltapäivä"
             name="pollojenNakyminen"
             class="form-check-input"
 id="pollojenNakyminen"
-aria-label="Pöllöjen näkyminen: Kyllä"
+aria-label="Kyllä"
           />
           <br />
         </div>
